[package]
name = "jsrwtt"
version = "0.1.0"
authors = ["Ben Hansen (sotrh)"]
edition = "2018"

[lib]
name = "jsrwtt_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.10"
pollster = { version = "0.3", features = ["macro"] }
log = "0.4"
tobj = { version = "3.2", default-features = false, features = ["async"] }
wgpu = "22.1.0"
winit = { version = "0.30.5", features = ["rwh_05"] }


[dependencies.image]
version = "0.24"
features = ["png", "jpeg", "hdr"]


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[features]
debug = []
